Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1>Blog</h1>
-        <h2>OS Loner</h2>
+        <h2>This is My Blog</h2>
         <a href="https://github.com/osloner/blog" class="button"><small>View project on</small>GitHub</a>
       </div>
     </header>
